--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -377,7 +377,7 @@ jobs:
     # Some tests fail here on the 15.x release branch, but it should pass
     # with versions from git main. Therefore, only include this in scheduled
     # builds for now.
-    if: (github.event_name == 'schedule') && (github.repository == 'mstorsjo/llvm-mingw')
+    if: (github.event_name != 'schedule') || (github.repository == 'mstorsjo/llvm-mingw')
     needs: [linux-cross]
     runs-on: windows-latest
     strategy:
